--- a/src/styles/searchboard.css
+++ b/src/styles/searchboard.css
@@ -1,36 +1,35 @@
 .search-board {
-  background-color: #FFF2EE;
-  display:grid; 
+  background-color: #fff2ee;
+  display: grid;
   grid-template-columns: 10rem 30rem 10rem;
   padding: 2rem;
-  grid-gap: 4rem ;
-  margin-left: 2rem; 
+  grid-gap: 4rem;
+  margin-left: 2rem;
   margin-top: 4em;
 }
 
 .key-word {
   font-weight: bold;
-  margin-top: .4em;
+  margin-top: 0.4em;
 }
 
-@media(max-width:1250px) {
-  .search-board{
+@media (max-width: 1250px) {
+  .search-board {
     display: grid;
-    grid-template-columns: 10rem 20rem 10rem ;
+    grid-template-columns: 10rem 20rem 10rem;
   }
 }
 
-@media(max-width:700px) {
- .search-board {
-   display: grid;
-   grid-template-columns: 8rem 15rem 10rem;
-  
- } 
+@media (max-width: 700px) {
+  .search-board {
+    display: grid;
+    grid-template-columns: 8rem 15rem 10rem;
+  }
 }
 
-@media (max-width:400px) {
-  .search-board{
+@media (max-width: 400px) {
+  .search-board {
     display: grid;
-    grid-template-columns: 3rem 7rem 6rem ;
+    grid-template-columns: 3rem 7rem 6rem;
   }
 }
